fixed content overlapping

--- a/style.css
+++ b/style.css
@@ -71,7 +71,6 @@ td:hover {
 #result {
   font-size: 20px;
   word-wrap: break-word;
-  overflow-y: scroll;
   height: 50%;
   
 }
@@ -186,13 +185,19 @@ table {
 
 /* made scrolling responsive for smaller devices- ify47 */
 #result { 
-  font-size: 20px;
-  word-wrap: break-word;
-  overflow: hidden;
+  width: 100%;
+  height: 100px;
 }
+
+.resultCalc {
+  word-break: break-all;
+  word-wrap: break-word;
+}
+
 
 #resultArea {
   margin-top: 50px;
+  width: 100%;
 }
 
 #previousExpression {
